src/classes/pages/assets/style.css
/* ... */
blockquote {
    padding-left: 0.4rem;
    border-left: solid 5px var(--background-surface);
    font-style: italic;
}

dialog {
    background: var(--background-surface);
    color: currentColor;
    border: none;
    position: fixed;
    margin: auto;
}

dialog h4 {
    margin-top: 0;
}

dialog::backdrop {
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(5px);
}

dialog[open] {
    animation: Grow 0.15s 0s running;
}

.editor-tab h1,
.editor-tab h2,
.editor-tab h3,
.editor-tab h4,
.editor-tab h5,
.editor-tab h6 {
    width: 100%;
}

.editor-tab input {
    height: max-content;
}

.card {
    background: var(--background-surface);
    padding: 1rem;
    display: block;
    width: 100%;
}

details {
    background: var(--background-surface1);
    color: currentColor;
    border: none;
    outline: none;
    font-size: 16px;
    height: max-content;
    max-width: 100%;
    user-select: none;
    -webkit-user-select: none;
    appearance: none;
}

details summary::marker,
details summary::-webkit-details-marker {
    display: none;
}

details.details-confined {
    width: 18rem;
    max-width: 100%;
}

details * {
    max-width: 100%;
}

details summary {
    background: var(--background-surface1);
    transition: all 0.15s;
    padding: 0.5rem 0.75rem;
    cursor: pointer;
    font-weight: 600;
    height: 40px; /* WHY is it normally 40.5px??? WHEN EVERTHING ELSE IS JUST 40!!! */
    list-style: none;
    display: flex;
    align-items: center;
}

details.secondary summary {
    background: var(--background-surface);
}

details summary::before {
    content: "▸"; /* rip correctly aligned triangle (U+2BC8) */
    margin-right: 5px;
    transition: transform 0.15s;
    /* the styles below are because I had to change the triangle character
       because iphones don't have the good character that I wanted! */
    font-size: 20px;
    margin-bottom: 3px;
}

details[open] summary::before {
    transform: rotate(90deg);
    /* this is kind of awful, why does it make me do this?? */
    margin-bottom: 0; /* ugh */
}

details[open] summary:not(details details summary) {
    margin-bottom: 0.5rem;
}

details summary:hover {
    background: var(--background-surface1-5);
}

details[open] summary {
    background: var(--background-surface);
    box-shadow: inset 0 0 0 2px var(--background-surface1);
}

details.secondary[open] summary {
    background: var(--background-surface-1);
    box-shadow: inset 0 0 0 2px var(--background-surface1-5);
}

details input {
    background: var(--background-surface);
}

details .details-flex-content-list-box {
    display: flex;
    gap: 0.5rem;
    flex-wrap: wrap;
    flex-direction: column;
    padding: 0rem 0.75rem 0.5rem;
}

.editor\:sidebar details[open] .details-flex-content-list-box,
details.secondary[open] .details-flex-content-list-box {
    outline: dashed 1px var(--background-surface2);
    border-radius: 0.4rem;
}

details details:nth-child(even) {
    background: var(--background-surface);
}

details hr {
    border-color: var(--background-surface2);
}

details.horizontal {
    position: relative;
    background: transparent !important;
}

details.horizontal .details-content {
    position: absolute;
    bottom: -40px; /* -height of summary */
    left: 0;
    display: none;
    z-index: 1;
    width: 20rem;
}

details.horizontal summary {
    width: 87px;
    justify-content: center;
}

details[open].horizontal summary {
    margin: 0;
    box-shadow: none;
    background: var(--background-surface1);
}

details[open].horizontal .details-content {
    display: flex;
    background: var(--background-surface1);
}

details[open].horizontal .details-content * {
    width: max-content;
}

/* codemirror styles */
.cm-cursor {
    border-color: currentColor !important;
    border-left: 1.2px solid currentColor !important;
}

.cm-selectionBackground {
    background: var(--red1) !important;
}

.cm-editor.cm-focused {
    outline: none;
}

.cm-scroller {
    overflow: auto;
}

.cm-tooltip {
    background-color: var(--background-surface) !important;
    padding: 0.4rem;
    border-radius: 0.2rem;
    border-color: var(--background-surface2) !important;
    color: var(--text-color) !important;
}

.cm-tooltip.cm-completionInfo {
    margin-left: 0.4rem;
}

.cm-tooltip-autocomplete li {
    padding: 0.4rem !important;
    border-radius: 0.2rem;
    transition: all 0.1s;
    color: var(--text-color) !important;
}

.cm-tooltip-autocomplete li[aria-selected="true"] {
    background: var(--background-surface1) !important;
    box-shadow: inset 0 0 0 2px var(--red);
}

/* highlight.js styles */
.hljs-comment {
    color: var(--green);
    font-style: italic;
}

.hljs-keyword {
    color: var(--red3);
}

.hljs-variable,
.hljs-title {
    color: var(--blue2);
}

.hljs-property,
.hljs-attr {
    color: var(--red);
}

.hljs-string {
    color: var(--green);
}

/* sidebar */
.sidebar {
    height: 100vh;
    width: 30%;
    min-width: 325px; /* just before the footer starts wrapping */
    overflow: auto;
    border-right: solid 1px var(--background-surface2);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 0.5rem;
}

.sidebar ol {
    padding-left: 1.5rem;
}

.sidebar-mobile {
    display: none;
    position: fixed;
    width: 100vw;
    height: max-content;
    overflow: scroll;
    bottom: 0;
    background: var(--background-surface);
    border-top: solid 1px var(--background-surface2);
    z-index: 2000;
}

.sidebar-mobile[open] {
    height: 80vh;
}

.sidebar-mobile[open] summary {
    top: 0;
    position: sticky;
    box-shadow: none;
    border-bottom: solid 1px var(--background-surface2);
}

.page-content {
    height: 100vh;
    max-height: initial;
    overflow: auto;
    width: 100%;
    padding-bottom: 4rem;
}

.sidebar-layout-wrapper {
    display: flex;
    height: 100vh;
    width: 100vw;
}
/* ... */

